<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolBar"
    tools:context="activity.ContestActivity">

    <TextView
        android:id="@+id/tvAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/spacing_middle"
        android:gravity="center"
        android:text="@string/question_not_available"
        android:textColor="@color/txt_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAlert"
        android:layout_centerHorizontal="true"
        android:background="@drawable/option_bg"
        android:paddingStart="@dimen/spacing_mxlarge"
        android:paddingTop="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_mxlarge"
        android:paddingBottom="@dimen/spacing_large"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:visibility="gone" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/innerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <!--appbar layout-->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <include layout="@layout/home_toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <!--main content layout-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_mlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginEnd="@dimen/spacing_mlarge"
            android:layout_marginBottom="@dimen/spacing_middle"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/score_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:baselineAligned="false"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/questions"
                            android:textAllCaps="true"
                            android:textColor="@color/txt_color"
                            android:textSize="@dimen/text_12sp" />

                        <TextView
                            android:id="@+id/txtTotalQuestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/zero"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                            android:textColor="@color/txt_color"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/timerSecond"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/score"
                            android:textAllCaps="true"
                            android:visibility="visible"
                            android:textColor="@color/txt_color"
                            android:textSize="@dimen/text_12sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.apptmyz.assessment.helper.CircleTimer
                            android:id="@+id/progressTimer"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:direction="counterclockwise" />

                        <TextView
                            android:id="@+id/question_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:gravity="center"
                            android:textColor="@color/txt_color"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/score"
                            android:textAllCaps="true"
                            android:textColor="@color/txt_color"
                            android:textSize="@dimen/text_12sp" />

                        <TextView
                            android:id="@+id/txtScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/zero"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                            android:textColor="@color/txt_color"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/test_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans"
                            android:gravity="right"
                            android:text="@string/score"
                            android:textAllCaps="true"
                            android:textColor="@color/txt_color"
                            android:textSize="@dimen/text_12sp" />
                    </LinearLayout>
                </LinearLayout>

                <include layout="@layout/lyt_question" />

                <include layout="@layout/lyt_for_options" />

                <include layout="@layout/lyt_bubble" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <include layout="@layout/bottom_view" />

</RelativeLayout>