<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".activity.TestDesignActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner_AdView"
        android:layout_below="@+id/toolBar"
        android:layout_marginTop="@dimen/spacing_mlarge"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:background="@drawable/gradient_cat_blue">

                <RelativeLayout
                    android:id="@+id/imgprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:gravity="center">

                    <RelativeLayout
                        android:id="@+id/imgLayout"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/circle_bg"
                        android:padding="2dp">

                        <com.apptmyz.assessment.helper.CircleImageView
                            android:id="@+id/imgProfile"
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_margin="2dp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imgLayout"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/spacing_middle"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </RelativeLayout>

                <View
                    android:id="@+id/divide0"
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_below="@+id/imgprofile"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@color/light_background" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/imgprofile"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="30dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/lytrank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_mlarge"
                        android:layout_marginEnd="@dimen/spacing_mlarge">

                        <TextView
                            android:id="@+id/tv_rank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvRank"
                            android:text="@string/rank"
                            android:textColor="@color/light_background"

                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvRank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/zero"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                    <View
                        android:id="@+id/divide1"
                        android:layout_width="0.4dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/spacing_mlarge"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_toEndOf="@+id/lytrank"
                        android:background="@color/light_background" />

                    <RelativeLayout
                        android:id="@+id/lytcoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/spacing_mlarge"
                        android:layout_marginEnd="@dimen/spacing_mlarge">

                        <TextView
                            android:id="@+id/txtcoin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvCoin"
                            android:text="@string/coins"
                            android:textColor="@color/light_background"
                            android:textSize="16sp"

                            />

                        <TextView
                            android:id="@+id/tvCoin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/zero"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="0.4dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/spacing_mlarge"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_toEndOf="@+id/lytcoin"
                        android:background="@color/light_background" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="@dimen/spacing_mlarge">

                        <TextView
                            android:id="@+id/txtscore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvScore"
                            android:layout_centerHorizontal="true"
                            android:text="@string/score"
                            android:textColor="@color/light_background"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_centerHorizontal="true"
                            android:text="@string/zero"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </RelativeLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_mlarge"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_middle"

                android:orientation="horizontal"
                android:weightSum="4">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_middle"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:background="@drawable/attended_bg">

                        <View
                            android:id="@+id/view3"
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/tvAttended"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/view3"
                            android:text="@string/zero"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvAttended"
                            android:layout_toEndOf="@+id/view3"
                            android:text="@string/attended"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:background="@drawable/correct_bg">

                        <View
                            android:id="@+id/view1"
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/tvCorrect"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/view1"
                            android:text="@string/zero"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvCorrect"
                            android:layout_toEndOf="@+id/view1"
                            android:text="@string/correct_ans"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:background="@drawable/in_correct_bg">

                        <View
                            android:id="@+id/view2"
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/tvInCorrect"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/view2"
                            android:text="@string/zero"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvInCorrect"
                            android:layout_toEndOf="@+id/view2"
                            android:text="@string/incorrect"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />
                    </RelativeLayout>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <com.apptmyz.assessment.helper.AudienceProgress
                        android:id="@+id/progress"
                        android:layout_width="@dimen/result_circle"
                        android:layout_height="@dimen/result_circle"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginEnd="@dimen/spacing_large"
                        android:layout_marginBottom="@dimen/spacing_large"
                        app:direction="clockwise" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/progress"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/spacing_middle">

                        <TextView
                            android:id="@+id/tvCorrectP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="3dp"
                            android:textColor="@color/txt_color"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvInCorrectP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_middle"
                            android:layout_toEndOf="@+id/tvCorrectP"
                            android:drawablePadding="3dp"
                            android:textColor="@color/txt_color"
                            android:textSize="12sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>